it is the begin

--- a/workspace/js/modules/auth/auth.scss
+++ b/workspace/js/modules/auth/auth.scss
@@ -6,5 +6,6 @@ body:before {
   left: 0;
   top: 0;
   background-size: cover;
+  background: url(../../../assets/images/bg.jpg) center center no-repeat;
   z-index: -1;
 }
