--- a/workspace/js/modules/auth/auth.scss
+++ b/workspace/js/modules/auth/auth.scss
@@ -1,11 +1,146 @@
-body:before {
-  content: '';
-  position: fixed;
-  width: 100%;
+@import "../../../scss/import";
+
+html#auth, html#auth body, .auth-main {
+
   height: 100%;
-  left: 0;
-  top: 0;
-  background-size: cover;
-  background: url(../../../assets/images/bg.jpg) center center no-repeat;
-  z-index: -1;
+  position: relative;
+}
+
+.auth-main {
+  margin: auto;
+  width: 100%;
+  @include display-flex(flex);
+  @include align-items(center);
+}
+
+.auth-block {
+  width: 540px;
+  margin: 0 auto;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.55);
+  color: #fff;
+  padding: 32px;
+}
+
+.auth-block h1 {
+  font-weight: normal;
+  margin-bottom: 28px;
+}
+
+.auth-block h1 {
+  text-align: center;
+}
+
+.auth-link {
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  font-size: 16px;
+  margin-bottom: 33px;
+}
+
+.form-group label {
+  font-weight: 400;
+  font-size: 13px;
+}
+
+.form-control {
+  border: none;
+}
+
+.form-control:focus {
+  box-shadow: none;
+}
+
+a.forgot-pass {
+  display: block;
+  text-align: right;
+  margin-bottom: -20px;
+  float: right;
+  z-index: 2;
+  position: relative;
+}
+
+.auth-sep {
+  margin-top: 36px;
+  margin-bottom: 24px;
+  line-height: 20px;
+  display: block;
+  position: relative;
+  font-size: 16px;
+  text-align: center;
+}
+
+.auth-sep:after, .auth-sep:before {
+  border-top: solid 1px #fff;
+  content: "";
+  height: 1px;
+  width: 35%;
+  display: table-cell;
+}
+
+.auth-sep > span {
+  display: table-cell;
+  width: 30%;
+  padding: 0 24px;
+  color: #fff;
+}
+
+.auth-sep > span, .nowrap {
+  white-space: nowrap;
+}
+
+.auth-sep > span > span {
+  margin-top: -12px;
+  display: block;
+}
+
+.al-share-auth {
+  text-align: center;
+}
+
+.al-share-auth .al-share {
+  float: none;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  li {
+    list-style: none;
+    float: left;
+    margin-left: 24px;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+}
+
+.socicon {
+  font-family: 'Icomoon Icon' !important;
+  cursor: pointer;
+  color: #fff;
+  padding: 6px;
+  box-sizing: content-box;
+  font-size: 24px;
+  font-style: normal;
+  border-radius: $border-radius-base;
+}
+
+.socicon-weibo {
+  background: #fa7d3c;
+  &:before {
+    content: "\e901";
+  }
+  &:hover {
+    background: darken(#fa7d3c, 6.5%);
+  }
+}
+
+.socicon-wechat {
+  background: #609700;
+  &:before {
+    content: "\e900";
+  }
+  &:hover {
+    background: darken(#609700, 6.5%);
+  }
 }
