--- a/template/html/reg.html
+++ b/template/html/reg.html
@@ -3,18 +3,22 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>auth</title>
-    <link href="css/basic.css" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" src="js/basic.js"></script>
-    <script type="text/javascript" src="js/dev/holder.min.js"></script>
+    <title>reg</title>
+    <link href="../css/basic.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="../js/basic.js"></script>
 </head>
 <body>
 <main class="auth-main">
     <div class="auth-block">
-        <h1>Sign in to Hope Admin</h1>
-        <a href="reg.html" class="auth-link">New to Hope Admin? Sign up!</a>
+        <h1>Sign up to Hope Admin</h1>
+        <a href="auth.html" class="auth-link">Already have a Hope Admin account? Sign in!</a>
 
         <form class="form-horizontal">
+            <div class="form-group">
+                <label for="input-name" class="col-sm-2 control-label">Name</label>
+                <div class="col-sm-10"><input type="email" class="form-control" id="input-name" placeholder="Full Name">
+                </div>
+            </div>
             <div class="form-group">
                 <label for="input-email" class="col-sm-2 control-label">Email</label>
 
@@ -29,8 +33,8 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="a btn btn-primary btn-auth">Sign in</button>
-                    <a href="" class="forgot-pass">Forgot password?</a></div>
+                    <button type="submit" class="a btn btn-primary btn-auth">Sign up</button>
+                </div>
             </div>
         </form>
         <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
