--- a/template/index.html
+++ b/template/index.html
@@ -6,9 +6,13 @@
     <title>dash board</title>
     <link href="css/basic.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="js/basic.js"></script>
+    <script src="js/modules/index.js"></script>
 </head>
 <body>
 <main>
+    <sidebar>
+        <aside class="al-sidebar"></aside>
+    </sidebar>
     <div class="page-top clearfix">
         <a href="#" class="al-logo clearfix">
             <span>Hope</span>Admin
