--- a/template/scss/basic.scss
+++ b/template/scss/basic.scss
@@ -438,3 +438,16 @@ a.collapse-menu-link {
 .fa-envelope-o:before{
   content: "\e904";
 }
+
+//dashboard left menu
+.al-sidebar {
+  width: 180px;
+  top: 66px;
+  left: 0;
+  z-index: 904;
+  display: block;
+  min-height: 100%;
+  background: rgba(0,0,0,.5);
+  height: 100%;
+  position: fixed;
+}
