--- a/workspace/js/modules/include/dashBoard/dashBoardLeftNav/dashBoardLeftNav.scss
+++ b/workspace/js/modules/include/dashBoard/dashBoardLeftNav/dashBoardLeftNav.scss
@@ -12,26 +12,38 @@
   position: fixed;
 }
 
-.al-sidebar-list,.al-sidebar-sublist {
+.al-sidebar .direct-line {
+  position: absolute;
+  width: 4px;
+  right: 0px;
+  top: -200px;
+  height: 43px;
+  background-color: darken($brand-primary, 10%);
+  @include transition(all 300ms ease-in-out);
+}
+
+.al-sidebar-list, .al-sidebar-sublist {
   margin: 0;
   padding: 18px 0 0;
   list-style: none;
 }
-.al-sidebar-list{
+
+.al-sidebar-list {
   font-size: 14px;
 }
-.al-sidebar-list li{
+
+.al-sidebar-list li {
   display: block;
   position: relative;
   float: none;
   padding: 0;
 }
-.al-sidebar-list li.selected{
-  background-color:  darken($brand-primary, 10%);
+
+.al-sidebar-list li.selected {
+  background-color: darken($brand-primary, 10%);
 }
 
-
-.al-sidebar-list a{
+.al-sidebar-list a {
   color: #fff;
   display: block;
   padding-left: 18px;
@@ -40,16 +52,17 @@
   text-transform: capitalize;
   word-wrap: break-word;
 }
-.al-sidebar-list li:not(.selected) a:hover,.al-sidebar-list li:not(.selected)  a:active {
+
+.al-sidebar-list li:not(.selected) a:hover, .al-sidebar-list li:not(.selected) a:active {
   color: $brand-primary;
-  b{
+  b {
     color: $brand-primary;
   }
 }
 
-.al-sidebar-list li.selected a:hover,.al-sidebar-list li.selected  a:active {
+.al-sidebar-list li.selected a:hover, .al-sidebar-list li.selected a:active {
   color: #fff;
-  b{
+  b {
     color: #fff;
   }
 }
@@ -62,11 +75,11 @@
   font-style: normal;
 }
 
-.al-sidebar-list i.home:before{
+.al-sidebar-list i.home:before {
   content: '\e900';
 }
 
-.al-sidebar-list i.cog:before{
+.al-sidebar-list i.cog:before {
   content: '\e901';
 }
 
@@ -85,24 +98,36 @@
   font-family: "Icomoon Icon";
 }
 
-.al-sidebar-list b.down:before{
+.al-sidebar-list b.down:before {
   content: '\e903';
 }
-.al-sidebar-list b.up:before{
+
+.al-sidebar-list b.up:before {
   content: '\e906';
 }
 
-.al-sidebar-sublist{
+.al-sidebar-sublist {
   font-size: 13px;
   padding-top: 0;
   height: 0px;
   overflow: hidden;
-  @include transition(all 1s linear)
+  @include transition(all 400ms linear);
 }
-.al-sidebar-list-item:hover .al-sidebar-sublist{
-  height: 60px;
+
+.al-sidebar-list-item .down {
+  @include transition(all 400ms linear);
+  @include rotate(0deg);
 }
-.al-sidebar-sublist a{
+
+.al-sidebar-list-item.opened .al-sidebar-sublist {
+  height: auto;
+}
+
+.al-sidebar-list-item.opened .down {
+  @include rotate(180deg);
+}
+
+.al-sidebar-sublist a {
   padding-left: 52px;
   line-height: 29px;
 }
