--- a/workspace/scss/basic.scss
+++ b/workspace/scss/basic.scss
@@ -11,6 +11,7 @@
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 body, html {
   min-height: 100%;
+  height: 100%;
   min-width: $screen-min-width;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -19,8 +20,12 @@ body {
   padding: 0;
   margin: 0;
   color: white;
+  overflow: hidden;
 }
-
+#entirety{
+  overflow: hidden;
+  height: 100%;
+}
 body:before {
   content: '';
   position: fixed;
@@ -53,4 +58,8 @@ a, .a {
   }
 }
 
-
+.fa{
+  font-family: 'Icomoon Icon' !important;
+  font-style: normal;
+  @include  transition(all 0.2s ease);
+}
