it is the begin

--- a/workspace/js/modules/common/panel/panel.scss
+++ b/workspace/js/modules/common/panel/panel.scss
@@ -1,1 +1,18 @@
 @import "../../../../scss/import";
+
+.panel {
+  background-size: cover;
+  background: url(../../../../assets/images/bg.jpg) fixed -1920px -950px;
+  @include animation(zoomIn 0.5s);
+  @include animation-fill-mode(both);
+  border: none;
+  border-radius: 5px;
+  position: relative;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .25);
+  margin-bottom: 20px;
+}
+
+.panel>.panel-body{
+  padding: 15px 22px;
+  height: 100%;
+}
