--- a/workspace/js/modules/include/dashBoard/dashBoardMain/dashBoardMain.scss
+++ b/workspace/js/modules/include/dashBoard/dashBoardMain/dashBoardMain.scss
@@ -142,7 +142,7 @@ main, .al-main {
 
 .al-content {
   margin: 0 20px;
-  padding: 8px 0;
+  padding: 8px 0 40px;
   min-height: 100%;
   position: relative;
   @media (max-width: $screen-xs-min - 1) {
