--- a/workspace/scss/import.scss
+++ b/workspace/scss/import.scss
@@ -16,6 +16,6 @@ $screen-min-width: 320px;
 
 $scroll-bar-width: 4px;
 $scroll-bar-height: $scroll-bar-width;
-
+$grid-gutter-width: 20px !default;
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
